--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,8 @@
   <!-- script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script -->
   <!-- script src="{{ '/assets/js/script.js' | relative_url }}"></script -->
 
-{% seo %} 
+{% seo title=false %}
+<title> {{ page.title }} </title>
 
 </head>
 
@@ -30,8 +31,7 @@
           <a href="{{ site.github.tar_url }}" class="download-button tar"><span>Download</span></a>
           <a href="{{ site.github.zip_url }}" class="download-button zip"><span>Download</span></a>
           {% endif %}
-          <a href="{{ site.github.repository_url }}" class="code">View {{ site.title | default: site.github.repository_name }} on GitHub</a>
-          <a href="eyechor.itch.io" class="code">And our itch.io page!</a>
+          <a href="https://eyechor.itch.io" class="code">Find our itch.io page here!</a>
 
         </div>
         <span class="blc"></span><span class="trc"></span>
@@ -75,3 +75,5 @@
   {% endif %}
 </body>
 </html>
+
+<!-- 69105  -->
