--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
 <!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
+
 <html lang="{{ site.lang | default: "en-US" }}">
 <head>
   <meta charset="utf-8">
@@ -12,27 +13,19 @@
   <!-- script src="{{ '/assets/js/script.js' | relative_url }}"></script -->
 
 {% seo title=false %}
-<title> {{ page.title }} </title>
-
+<title> {{ page.title_tag_text | default: page.title  }} </title>
 </head>
-
 <body>
-
   <div class="wrapper">
     <header>
       <h1 class="title">{{ page.title | default: site.github.repository_name }}</h1>
     </header>
     <div id="container">
-      <p class="tagline">{{ page.description | default: site.github.project_tagline }}</p>
+      <p class="tagline">{{ page.banner_text | default: page.description }}</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          {% if site.show_downloads %}
-          <a href="{{ site.github.tar_url }}" class="download-button tar"><span>Download</span></a>
-          <a href="{{ site.github.zip_url }}" class="download-button zip"><span>Download</span></a>
-          {% endif %}
           <a href="https://eyechor.itch.io" class="code">Find our itch.io page here!</a>
-
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
@@ -43,17 +36,17 @@
     </div>
     <footer>
       <div class="owner">
-      {% if site.github.is_project_page %}
-      <p><a href="{{ site.github.owner_url }}" class="avatar"><img src="{{ site.github.owner_gravatar_url }}" width="48" height="48"></a> <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a> maintains <a href="{{ site.github.repository_url }}">{{ site.title | default: site.github.repository_name }}</a></p>
-      {% endif %}
-
-       {% if site.github.is_user_page %}
       <p><a href="{{ site.github.owner_url }}" class="avatar"><img src="{{ site.github.owner_gravatar_url }}" width="48" height="48"></a>View <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a> on <a href="https://www.github.com">GitHub</a></p>
-      {% endif %}
-
       </div>
       <div class="creds">
+
+        {% if page.creds %}
+        <small>{{ page.creds }}</small>
+
+        {% else %}
         <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+
+        {% endif %}
       </div>
     </footer>
   </div>
